--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 # File           : README.org
 # Created        : <2016-11-16 Wed 00:51:06 GMT>
-# Last Modified  : <2017-12-20 Wed 23:06:34 GMT> Sharlatan
+# Last Modified  : <2018-1-02 Tue 23:11:04 GMT> Sharlatan
 # Author         : sharlatan
 # Short          : README-en
 
@@ -52,12 +52,13 @@ Distribution per subjest:
 QTY  CMD       PKG
 ---  ---       ---
 33   tcpdump   tcpdump
+18   awk       gawk
 17   sed       sed
-15   awk       gawk
 10   find      gnu-findutils
 10   dd        gnu-coreutils
 7    chmod     gnu-coreutils
 5    strace    strace
+5    nc        netcat
 5    mount     util-linux
 5    ls        gnu-coreutils
 5    grep      gnu-grep
@@ -70,7 +71,6 @@ QTY  CMD       PKG
 3    xargs     gnu-findutils
 3    udevadm   systemd
 3    tr        gnu-coreutils
-3    nc        nmap-ncat
 3    dpkg      dpkg
 2    wget      wget
 2    tee       gnu-coreutils
@@ -80,10 +80,11 @@ QTY  CMD       PKG
 2    rsync     rsync
 2    objdump   gnu-binutils
 2    nohup     gnu-coreutils
-2    nc        netcat
+2    ncat      ncat
 1    while     gnu-bash
 1    whatis    man-db
 1    usermod   shadow-utils
+1    timeout   gnu-coreutils
 1    strings   gnu-binutils
 1    smem      smem
 1    set       gnu-bash
@@ -118,6 +119,6 @@ QTY  CMD       PKG
 
 Distribution per example:
 
-Onliners:  229
+Onliners:  237
 Scripts:   108
 #+END_SRC
